# 3info1-garagem

./: README.md  db.sqlite3  manage.py  pyproject.toml
app/: settings.py  urls.py
backend/: app.py  manage.py
backend/core/: models.py  serializers.py  views.py
core/: admin.py  models.py  serializers.py  urls.py  views.py
core/models/: __init__.py  acessorio.py  cor.py  modelo.py  veiculo.py
core/serializers/: __init__.py  acessorio.py  cor.py  modelo.py  veiculo.py
core/views/: acessorio.py  cor.py  modelo.py  veiculo.py
frontend/: App.vue  index.html  package-lock.json  package.json
