[project]
name = "3info1-garagem"
version = "0.1.0"
description = "projeto do ifc"
authors = [
    {name = "martinsbruno2026", email = "martinsbru08@gmail.com"},
]
dependencies = []
requires-python = ">=3.13"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
